<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.appagence.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.app.appagence.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.app.appagence.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.app.appagence.ui.settings.SettingFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.app.appagence.ui.details.DetailsFragment"
        android:label="Product Details"
        tools:layout="@layout/fragment_details"/>
</navigation>