<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.appagence.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.login.LoginActivity">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_agence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="64dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/agence" />

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/text_welcome"
                    android:textColor="@color/blueHarmony"
                    android:textSize="@dimen/twenty"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_agence" />

                <TextView
                    android:id="@+id/tv_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/text_user"
                    android:textColor="@color/blueHarmony"
                    android:textSize="@dimen/thirteen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    app:cardBackgroundColor="@color/grayNobel"
                    app:cardCornerRadius="28dp"
                    app:cardElevation="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="17dp"
                        android:background="@color/grayNobel"
                        android:fontFamily="@font/opensans_bold"
                        android:hint="@string/nav_header_subtitle"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/blueHarmony"
                        android:textColorHint="@color/blueHarmony"
                        android:textSize="@dimen/twelve"
                        android:theme="@style/CustomEditTextInvisibility"
                        tools:ignore="Autofill" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/text_password"
                    android:textColor="@color/blueHarmony"
                    android:textSize="@dimen/thirteen"
                    app:layout_constraintStart_toStartOf="@+id/tv_user"
                    app:layout_constraintTop_toBottomOf="@+id/mcv_user" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="8dp"
                    app:cardBackgroundColor="@color/grayNobel"
                    app:cardCornerRadius="28dp"
                    app:cardElevation="1dp"
                    app:layout_constraintEnd_toEndOf="@+id/mcv_user"
                    app:layout_constraintStart_toStartOf="@+id/mcv_user"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:theme="@style/CustomEditTextInvisibility"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/blueHarmony">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="17dp"
                            android:background="@color/grayNobel"
                            android:fontFamily="@font/opensans_bold"
                            android:hint="@string/text_password_example"
                            android:inputType="textPassword"
                            android:textColor="@color/blueHarmony"
                            android:textColorHint="@color/blueHarmony"
                            android:textSize="@dimen/twelve"
                            tools:ignore="Autofill" />

                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.card.MaterialCardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ll_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mcv_password">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="@color/grayNobel"
                        app:cardCornerRadius="28dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/opensans_semibold"
                            android:gravity="center"
                            android:text="@string/text_login"
                            android:textAllCaps="true"
                            android:textColor="@color/blueHarmony"
                            android:textSize="@dimen/fifteen" />

                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/button_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/text_forgot_password"
                    android:textColor="@color/blueHarmony"
                    android:textSize="@dimen/twelve"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_enter" />

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/grayNobel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_forgot_password" />

                <TextView
                    android:id="@+id/text_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/text_or"
                    android:textColor="@color/blueHarmony"
                    android:textSize="@dimen/twelve"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/button_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/grayNobel"
                    app:cardCornerRadius="28dp"
                    app:layout_constraintTop_toBottomOf="@+id/text_or"
                    tools:layout_editor_absoluteX="32dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mcv_password"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:background="@drawable/ic_facebook" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/opensans_semibold"
                            android:gravity="center"
                            android:text="@string/text_account_facebook"
                            android:textColor="@color/blueHarmony"
                            android:textSize="@dimen/fifteen" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/button_google"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    app:cardBackgroundColor="@color/grayNobel"
                    app:cardCornerRadius="28dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_facebook"
                    tools:layout_editor_absoluteX="32dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mcv_password"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/app_name"
                            android:background="@drawable/ic_google" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="32dp"
                            android:fontFamily="@font/opensans_semibold"
                            android:gravity="center"
                            android:text="@string/text_account_google"
                            android:textColor="@color/blueHarmony"
                            android:textSize="@dimen/fifteen" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>